# DTEAM-django-practical-test

./: .env.example  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
CVProject/: asgi.py  celery.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
audit/: middleware.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/templates/audit/: request_logs.html
audit/tests/: test_middleware.py
main/: api_urls.py  models.py  serializers.py  tasks.py  translate.py  urls.py  views.py
main/fixtures/: sample_cv.json
main/migrations/: 0001_initial.py  0002_cv_bio_translated_cv_firstname_translated_and_more.py
main/templates/main/: cv_detail.html  cv_detail_mail.html  cv_list.html  cv_pdf.html
main/tests/: test_api.py  test_views.py
nginx/: nginx.conf
scripts/: entrypoint.deploy.sh  entrypoint.sh
templates/core/: settings_page.html
