[project]
name = "dteam-django-practical-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail Gomziak",email = "mikhailgomziak@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
